# Autodebugger-with-multiple-chatbots

./: .env.example  .gitignore  Makefile  README.md  app.py  debugger.ipynb  env.bat  pyproject.toml  utils.py
autodebugger/: __init__.py  app.py  utils.py
backup/v1/: utils.py
backup/v2/: app.py  utils.py
backup/v3/: app.py
backup/v4/: app.py
backup/v5/: app.py  utils.py
tests/: __init__.py  conftest.py  test_app.py  test_utils.py
